--- a/boostrap.html
+++ b/boostrap.html
@@ -7,11 +7,10 @@
     <title>ADMIN - Desa Cimarga | Kabupaten Sumedang</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./boostrap.css">
-    <script src="./boostrap.js"></script>
 </head>
 
 <body>
-    <div id="app" class="d-flex">
+    <div class="d-flex">
         <div>
             <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px; height: 100vh;">
                 <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
@@ -27,22 +26,22 @@
                 <hr>
                 <ul class="nav nav-pills flex-column mb-auto">
                     <li class="nav-item">
-                        <a id="Home-button" href="#" class="nav-link text-white" aria-current="page" aria-hidden="true">
+                        <button id="Home-button" href="#" class="nav-link text-white navigasi" aria-current="page" aria-hidden="true">
                             <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#home"></use></svg> Home
-                        </a>
+                        </button>
                     </li>
                     <li>
-                        <a id="Postingan-button" href="#" class="nav-link text-white">
+                        <button id="Postingan-button" href="#" class="nav-link text-white navigasi">
                             <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg> Postingan
-                        </a>
+                        </button>
                     </li>
                     <li>
-                        <a id="Statistik-button" href="#" class="nav-link text-white">
+                        <button id="Statistik-button" href="#" class="nav-link text-white navigasi">
                             <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#table"></use></svg> Statistik
-                        </a>
+                        </button>
                     </li>
                     <li>
-                        <a href="https://desacimarga.com" target="_blank" class="nav-link" style="color: greenyellow;">
+                        <a href="https://desacimarga.com" target="_blank" class="nav-link navigasi" style="color: greenyellow;">
                             <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg> Lihat Website
                         </a>
                     </li>
@@ -78,7 +77,7 @@
         </div>
 
     </div>
-
+    <script src="./boostrap.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
