Firebase Gatau Jalan ga

--- a/public/admin-page/boostrap.html
+++ b/public/admin-page/boostrap.html
@@ -77,33 +77,17 @@
         <div id="Postingan" class="container align-items-center" style="background-color: #eee; display: none; overflow: hidden;">
             <h1 class="text-start text-lg-start p-0 m-0">Upload</h1>
             <div class="text-center" style="height: 100%; display: flex; justify-content: center; align-items: center;">
-                <table class="table">
+                <table>
                     <thead>
                         <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">First</th>
-                            <th scope="col">Last</th>
-                            <th scope="col">Handle</th>
+                            <th>No</th>
+                            <th>Nama Gambar</th>
+                            <th>Url</th>
+                            <th>Action</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td colspan="2">Larry the Bird</td>
-                            <td>@twitter</td>
-                        </tr>
+                    <tbody id="gallery-table-body">
+                        <!-- Table rows will be added here dynamically -->
                     </tbody>
                 </table>
             </div>
