--- a/public/dusun/cipeundey.html
+++ b/public/dusun/cipeundey.html
@@ -119,6 +119,7 @@ Credit by Kelompok 15 KKN ITB 2023
     </script>
 
     <script src="../assets/script.js"></script>
+    <script src="../dusun/gallery.js"></script>
 </body>
 
 </html>
