--- a/public/dusun/cipeundey.html
+++ b/public/dusun/cipeundey.html
@@ -117,7 +117,8 @@ Credit by Kelompok 15 KKN ITB 2023
     <script>
         feather.replace()
     </script>
-
+        <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase.js"></script>
+    <script src="../admin-page/firebase-config.js"></script>
     <script src="../assets/script.js"></script>
     <script src="../dusun/gallery.js"></script>
 </body>
