Nambahin viewer count

--- a/public/dusun/cipeundey.html
+++ b/public/dusun/cipeundey.html
@@ -106,6 +106,7 @@ Credit by Kelompok 15 KKN ITB 2023
     <script src="../admin-page/firebase-config.js"></script>
     <script src="../assets/script.js"></script>
     <script src="../dusun/gallery.js"></script>
+    <script src="../assets/viewer-count.js"></script>
 </body>
 
 </html>
