--- a/public/index.html
+++ b/public/index.html
@@ -161,6 +161,8 @@ Credit by Kelompok 15 KKN ITB 2023
 
     <script src="./assets/script.js"></script>
     <script src="./assets/api-config.js"></script>
+    <script src="./admin-page/firebase-config.js"></script>
+    <script src="../assets/viewer-count.js"></script>
 </body>
 
 </html>
